--- a/3d-effect/index.html
+++ b/3d-effect/index.html
@@ -25,18 +25,82 @@
 			
 			<div class="frame frame_bg">
 				<div class="frame__content">
-					<div class="frame-media frame-media_right" style="background-image: url(/3d-effect/sources/photos/1.jpg);"></div>
+					<video class="frame-media frame-media_right" src="/3d-effect/sources/video/video_optimized.mp4" autoplay loop muted></video>
 				</div>
 			</div>
 
+			<div class="frame"></div>
+
 			<div class="frame">
-				<div class="frame__content">
-					<div class="frame-media" style="background-image: url(/3d-effect/sources/photos/1.jpg);"></div>
+				<div class="frame__content text-right">
+					<h3>Pure planet</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat deleniti ab sit laboriosam amet, nam cupiditate placeat laudantium natus?</p>
 				</div>
+			</div>
+
+			<div class="frame frame_bg">
+				<div class="frame__content">
+					<div class="frame-media frame-media_left" style="background-image: url(/3d-effect/sources/photos/2.jpg);"></div>
+				</div>
+			</div>
+
+			<div class="frame"></div>
+
+			<div class="frame frame_bg">
+				<div class="frame__content">
+					<div class="frame-media frame-media_right" style="background-image: url(/3d-effect/sources/photos/3.jpg);"></div>
+				</div>
+			</div>
+
+			<div class="frame"></div>
+
+			<div class="frame">
+				<div class="frame__content text-left">
+					<h3>Ask the Mountains</h3>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Reprehenderit harum voluptate qui accusamus velit sequi rerum incidunt soluta fugit facere. Deserunt odio eos dolor inventore quidem!</p>
+				</div>
+			</div>
+
+			<div class="frame frame_bg">
+				<div class="frame__content">
+					<div class="frame-media frame-media_right" style="background-image: url(/3d-effect/sources/photos/4.jpg);"></div>
+				</div>
+			</div>
+
+			<div class="frame"></div>
+
+			<div class="frame frame_bg">
+				<div class="frame__content">
+					<video class="frame-media frame-media_left" src="/3d-effect/sources/video/video_optimized.mp4" autoplay loop muted></video>
+				</div>
+			</div>
+
+			<div class="frame"></div>
+			<div class="frame"></div>
+
+			<div class="frame frame_bg">
+				<div class="frame__content">
+					<div class="frame-media frame-media_right" style="background-image: url(/3d-effect/sources/photos/5.jpg);"></div>
+				</div>
+			</div>
+
+			<div class="frame frame_bg">
+				<div class="frame__content">
+					<video class="frame-media" src="/3d-effect/sources/video/video_optimized.mp4" autoplay loop muted></video>
+				</div>
+			</div>
+
+			<div class="frame"></div>
+
+			<div class="frame">
+				<div class="frame__content">© Amazonooo</div>
 			</div>
 
 		</section>
 	</div>
+
+	<img class="soundbutton paused" src="/3d-effect/assets/images/sound.gif" alt="soundbutton">
+	<audio class="audio" src="/3d-effect/assets/media/ambient.mp3" loop ></audio>
 
 </body>
 </html>
